# cmakeModel

./: CMakeLists.txt
include/hello/: helloTest.h
src/: CMakeLists.txt
src/hello/: helloTest.cpp
test/: CMakeLists.txt
